Fixed related posts on mobile

--- a/wp-content/themes/underfloripa/sass/components/_related.scss
+++ b/wp-content/themes/underfloripa/sass/components/_related.scss
@@ -9,12 +9,12 @@
 	}
 
 	ul {
-		display: flex;
-		list-style: none;
+		display: grid;
+		grid-template-columns: 1fr;
 		gap: 1rem;
+		list-style: none;
 
 		li {
-			flex: 1 1 0;
 			text-align: center;
 
 			.related-post-thumb {
@@ -24,7 +24,6 @@
 				img {
 					aspect-ratio: 1/1;
 					width: 100%;
-					height: 100%;
 					object-fit: cover;
 					transition: transform 0.4s ease;
 				}
@@ -33,10 +32,18 @@
 					transform: scale(1.05);
 				}
 			}
+		}
+	}
 
-			a {
-				font-weight: 400;
-			}
+	@media (min-width: 601px) {
+		ul {
+			grid-template-columns: repeat(2, 1fr);
+		}
+	}
+
+	@media (min-width: 1025px) {
+		ul {
+			grid-template-columns: repeat(4, 1fr);
 		}
 	}
 }
