--- a/wp-content/themes/underfloripa/sass/layout/_navigation.scss
+++ b/wp-content/themes/underfloripa/sass/layout/_navigation.scss
@@ -239,3 +239,7 @@
     display: none;
   }
 }
+
+.rank-math-breadcrumb {
+  margin-bottom: 1rem;
+}
